# stm32f4-linux-sample

./: CMakeLists.txt  gdb.sh
lib/: CMakeLists.txt  Makefile  startup_stm32f4xx.s
src/: CMakeLists.txt  main.c  stm32f4xx_it.c
